@@ -441,15 +441,33 @@ block|{
 try|try
 block|{
 name|Class
+argument_list|<
+name|?
+argument_list|>
+name|clazz
+init|=
+name|Class
 operator|.
 name|forName
 argument_list|(
 literal|"java.nio.DirectByteBuffer"
 argument_list|)
+decl_stmt|;
+name|Method
+name|method
+init|=
+name|clazz
 operator|.
 name|getMethod
 argument_list|(
 literal|"cleaner"
+argument_list|)
+decl_stmt|;
+name|method
+operator|.
+name|setAccessible
+argument_list|(
+literal|true
 argument_list|)
 expr_stmt|;
 return|return
